tests/checker/ok/http_json_literal_static.can
NotFound = Body

Unit => NotFound {
    {"error":"not found"} -> Body
}

Request => Response {
    Status(404) -> Response(Headers() * NotFound())
}
