tests/checker/fail/use_removed.can
use Foo

main = () -> Unit {
    "x".print()
}
